secrets-manager-usage/tests/fails/unknown_secret.stderr
error: Could not find secret with any of these names: FakeSecret,fake-secret,fake_secret
 --> tests/fails/unknown_secret.rs:4:12
  |
4 | pub struct FakeSecret {}
  |            ^^^^^^^^^^
